--- a/layouts/partials/paige/site-header.html
+++ b/layouts/partials/paige/site-header.html
@@ -10,8 +10,7 @@
 {{ $pills := false }}
 {{ $style := $page.Param "paige.site.menu_style" }}
 {{ $tabs := false }}
-{{ $title := "" }} {{/* Determina titolo per lingua */}}
-{{ with site.GetPage "/" }}{{ with .Title }}{{ $title = . | markdownify | and ($page.Param "paige.site.disable_title" | not) }}{{ end }}{{ end }}
+{{ $title := site.Title | markdownify | and ($page.Param "paige.site.disable_title" | not) }}
 {{ $underline := false }}
 
 {{ if eq $basePath "/" }}
@@ -21,11 +20,18 @@
 {{ $pagePath := strings.TrimPrefix $basePath $page.RelPermalink }}
 
 {{ with $style }}
-    {{ if eq . "pills" }}{{ $pills = true }}
-    {{ else if eq . "tabs" }}{{ $tabs = true }}
-    {{ else if eq . "underline" }}{{ $underline = true }}
-    {{ else }}{{ $links = true }}{{ end }}
-{{ else }}{{ $links = true }}{{ end }}
+    {{ if eq . "pills" }}
+        {{ $pills = true }}
+    {{ else if eq . "tabs" }}
+        {{ $tabs = true }}
+    {{ else if eq . "underline" }}
+        {{ $underline = true }}
+    {{ else }}
+        {{ $links = true }}
+    {{ end }}
+{{ else }}
+    {{ $links = true }}
+{{ end }}
 
 {{ if or $breadcrumbs $description $first $last $menu $title }}
     <header id="paige-site-header">
@@ -33,8 +39,8 @@
 
         {{ with $title }}
             <div class="display-1 fw-bold {{ if not (or $breadcrumbs $description $menu) }} paige-row-tall {{ end }} text-center" id="paige-site-title">
-                 {{/* Link Home con absLangURL */}}
-                <a class="text-body text-decoration-none" href="{{ "/" | absLangURL }}">{{ . }}</a> </div>
+                <a class="text-body text-decoration-none" href="{{ relLangURL `` }}">{{ . }}</a>
+            </div>
         {{ end }}
 
         {{ with $description }}
@@ -42,27 +48,51 @@
         {{ end }}
 
         {{ if $menu }}
-            {{ with site.Menus.main }} {{/* Usa menu globale/default lang? */}}
-                <nav aria-label="{{ T `paige_menu` | default "Main menu" }}" class="paige-row-tall" id="paige-site-menu">
+            {{ with site.Menus.main }}
+                <nav aria-label="{{ i18n `paige_menu` }}" class="paige-row-tall" id="paige-site-menu">
                     <ul class="align-items-center justify-content-center nav {{ if $pills }} nav-pills {{ else if $tabs }} nav-tabs {{ else if $underline }} nav-underline {{ end }}">
                         {{ range . }}
-                            {{/* Logica stato attivo originale del tema */}}
                             {{ $menuPath := strings.TrimPrefix $basePath .URL }}
+
                             {{ $home := and (eq $menuPath "/") (eq $page.Section "") }}
                             {{ $menu := and (ne $menuPath "/") (hasPrefix $pagePath $menuPath) }}
                             {{ $section := and (ne $menuPath "/") (hasPrefix $menuPath (printf "/%s/" $page.Section)) }}
+
                             {{ $active := or $home $menu $section }}
 
                             <li class="nav-item {{ if .Children }} dropdown {{ end }}">
-                                {{/* Link principale con absLangURL */}}
-                                <a {{ if $active }} aria-current="page" {{ end }} {{ if .Children }} aria-expanded="false" {{ end }} class="{{ if $active }} active {{ if $links }} fw-bold text-body {{ end }} {{ end }} {{ if .Params.paige.disabled }} disabled {{ end }} nav-link {{ if .Children }} dropdown-toggle {{ end }} {{ if $links }} text-decoration-underline {{ end }}" {{ if .Children }} data-bs-toggle="dropdown" {{ end }} href="{{ if not .Children -}}{{- .URL | absLangURL -}}{{- end }}" {{ if .Children }} role="button" {{ end }} {{ if not .Children }} {{ with partial "paige/func-target.html" (dict "page" $page "url" (.URL | absLangURL)) }} target="{{ . }}" {{ end }} {{ end }}>{{ .Name | markdownify }}</a> {{ with .Children }}
+                                <a {{ if $active }} aria-current="page" {{ end }} {{ if .Children }} aria-expanded="false" {{ end }} class="{{ if $active }} active {{ if $links }} fw-bold text-body {{ end }} {{ end }} {{ if .Params.paige.disabled }} disabled {{ end }} nav-link {{ if .Children }} dropdown-toggle {{ end }} {{ if $links }} text-decoration-underline {{ end }}" {{ if .Children }} data-bs-toggle="dropdown" {{ end }} href="{{ if not .Children -}} {{- .URL -}} {{- end }}" {{ if .Children }} role="button" {{ end }} {{ if not .Children }} {{ with partial "paige/func-target.html" (dict "page" $page "url" .URL) }} target="{{ . }}" {{ end }} {{ end }}>{{ .Name | markdownify }}</a>
+
+                                {{ with .Children }}
                                     <ul class="dropdown-menu">
                                         {{ range . }}
-                                            {{/* ... (divider/header invariati) ... */}}
+                                            {{ if .Params.paige.divider_above }}
+                                                <li>
+                                                    <hr class="dropdown-divider">
+                                                </li>
+                                            {{ end }}
+
+                                            {{ with .Params.paige.header_above }}
+                                                <li>
+                                                    <h6 class="dropdown-header">{{ . }}</h6>
+                                                </li>
+                                            {{ end }}
+
                                             <li>
-                                                 {{/* Link sottomenu con absLangURL */}}
-                                                <a class="{{ if .Params.paige.disabled }} disabled {{ end }} dropdown-item" href="{{ .URL | absLangURL }}" {{ with partial "paige/func-target.html" (dict "page" $page "url" (.URL | absLangURL)) }} target="{{ . }}" {{ end }}>{{ .Name | markdownify }}</a> </li>
-                                           {{/* ... (divider/header invariati) ... */}}
+                                                <a class="{{ if .Params.paige.disabled }} disabled {{ end }} dropdown-item" href="{{ .URL }}" {{ with partial "paige/func-target.html" (dict "page" $page "url" .URL) }} target="{{ . }}" {{ end }}>{{ .Name | markdownify }}</a>
+                                            </li>
+
+                                            {{ if .Params.paige.divider_below }}
+                                                <li>
+                                                    <hr class="dropdown-divider">
+                                                </li>
+                                            {{ end }}
+
+                                            {{ with .Params.paige.header_below }}
+                                                <li>
+                                                    <h6 class="dropdown-header">{{ . }}</h6>
+                                                </li>
+                                            {{ end }}
                                         {{ end }}
                                     </ul>
                                 {{ end }}
@@ -70,26 +100,34 @@
                         {{ end }}
                     </ul>
                 </nav>
-            {{/* Ripristinato l'else originale del tema */}}
             {{ else }}
                 {{ $pages := site.Sections }}
+
                 {{ range $name, $taxonomy := site.Taxonomies }}
                     {{ if and $taxonomy.Page $taxonomy.Page.RelPermalink }}
                         {{ $pages = $pages | append $taxonomy.Page }}
                     {{ end }}
                 {{ end }}
+
                 {{ $pages = sort $pages "LinkTitle" }}
-                <nav aria-label="{{ T `paige_menu` | default "Main menu" }}" class="paige-row-tall" id="paige-site-menu">
+
+                <nav aria-label="{{ i18n `paige_menu` }}" class="paige-row-tall" id="paige-site-menu">
                     <ul class="align-items-center justify-content-center nav {{ if $pills }} nav-pills {{ else if $tabs }} nav-tabs {{ else if $underline }} nav-underline {{ end }}">
                         {{ $active := eq $page.Section "" }}
+
                         <li class="nav-item">
-                            <a {{ if $active }} aria-current="page" {{ end }} class="{{ if $active }} active {{ if $links }} fw-bold text-body {{ end }} {{ end }} nav-link {{ if $links }} text-decoration-underline {{ end }}" href="{{ "/" | absLangURL }}">{{ T "paige_home" | default "Home" }}</a> </li>
+                            <a {{ if $active }} aria-current="page" {{ end }} class="{{ if $active }} active {{ if $links }} fw-bold text-body {{ end }} {{ end }} nav-link {{ if $links }} text-decoration-underline {{ end }}" href="{{ relLangURL `` }}">{{ i18n "paige_home" }}</a>
+                        </li>
+
                         {{ range $pages }}
                             {{ $menuPath := strings.TrimPrefix $basePath .RelPermalink }}
+
                             {{ $home := and (eq $menuPath "/") (eq $page.Section "") }}
                             {{ $menu := and (ne $menuPath "/") (hasPrefix $pagePath $menuPath) }}
                             {{ $section := and (ne $menuPath "/") (hasPrefix $menuPath (printf "/%s/" $page.Section)) }}
+
                             {{ $active := or $home $menu $section }}
+
                             <li class="nav-item">
                                 <a {{ if $active }} aria-current="page" {{ end }} class="{{ if $active }} active {{ if $links }} fw-bold text-body {{ end }} {{ end }} nav-link {{ if $links }} text-decoration-underline {{ end }}" href="{{ .RelPermalink }}" {{ with partial "paige/func-target.html" (dict "page" $page "url" .RelPermalink) }} target="{{ . }}" {{ end }}>{{ .LinkTitle }}</a>
                             </li>
@@ -100,12 +138,12 @@
         {{ end }}
 
         {{ with $breadcrumbs }}
-             {{/* ... Logica breadcrumbs invariata ... */}}
-            <nav aria-label="{{ T `paige_breadcrumbs` | default "Breadcrumbs" }}" class="paige-row-tall" id="paige-site-breadcrumbs">
+            <nav aria-label="{{ i18n `paige_breadcrumbs` }}" class="paige-row-tall" id="paige-site-breadcrumbs">
                 <div class="d-flex justify-content-center">
                     <ol class="breadcrumb mb-0">
                         {{ range . }}
-                            {{ $title := cond .IsHome (T "paige_home" | default "Home") .LinkTitle }}
+                            {{ $title := cond .IsHome (i18n "paige_home") .LinkTitle }}
+
                             <li class="breadcrumb-item">
                                 <a href="{{ .RelPermalink }}">{{ $title | markdownify | plainify | htmlUnescape }}</a>
                             </li>
