--- a/layouts/partials/paige/site-footer-last.html
+++ b/layouts/partials/paige/site-footer-last.html
@@ -5,15 +5,15 @@
 
 <div style="text-align: center; margin-top: 1rem; font-size: 1.5rem;">
 
-  <a href="URL_PROFILO_LINKEDIN" title="{{ T "linkedinTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" style="text-decoration: none; margin-right: 0.75rem;">
+  <a href="https://www.linkedin.com/in/lorenzo-caputo1202/" title="{{ T "linkedinTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn Profile" style="text-decoration: none; margin-right: 0.75rem;">
     <i class="bi bi-linkedin" aria-hidden="true"></i>
   </a>
 
-  <a href="URL_PROFILO_GITHUB" title="{{ T "githubTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" style="text-decoration: none; margin-left: 0.75rem; margin-right: 0.75rem;">
+  <a href="https://github.com/modernage12" title="{{ T "githubTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="GitHub Profile" style="text-decoration: none; margin-left: 0.75rem; margin-right: 0.75rem;">
     <i class="bi bi-github" aria-hidden="true"></i>
   </a>
 
-  <a href="URL_PROFILO_SPOTIFY" title="{{ T "spotifyTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="Spotify Profile" style="text-decoration: none; margin-left: 0.75rem;">
+  <a href="https://open.spotify.com/user/8231spvupmlhz640983icnslg" title="{{ T "spotifyTitle" }}" target="_blank" rel="noopener noreferrer" aria-label="Spotify Profile" style="text-decoration: none; margin-left: 0.75rem;">
     <i class="bi bi-spotify" aria-hidden="true"></i>
   </a>
 
